--- a/index.html
+++ b/index.html
@@ -2,12 +2,57 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/ams.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Censimento AMS-SMA</title>
+    <style>
+      body {
+        margin: 0px;
+        display: flex;
+        min-height: 100vh;
+        height: 100%;
+        width: 100%;
+      }
+  
+      .loader-wrapper {
+        width: 100%;
+        height: 100%;
+        position: fixed;
+        top: 0;
+        left: 0;
+        background: linear-gradient(180deg, rgba(15, 133, 161, 0), rgba(17, 77, 161, 0.5) 50%, rgb(15 77 161 / 90%) 100%);
+        display: grid;
+        place-items: center;
+        
+      }
+  
+      .loader {
+        height: 150px;
+        animation: scale 2s linear infinite;
+      }
+  
+      @keyframes scale {
+        0% {
+          transform: scale(1);
+        }
+
+        50% {
+          transform: scale(1.4);
+        }
+  
+        100% {
+          transform: scale(1);
+        }
+      }
+    </style>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root">
+      <div class="loader-wrapper">
+        <img src="src\assets\ams.png" alt="" class="loader">
+        
+      </div>
+    </div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
